working on displaying names properly when entered, mainly working on displayNames function and made some todo notes in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-
+<!-- TODO: combine all forms and collect all data at the same time with single submit btn -->
+<!-- TODO: -->
 <body>
     <div id="app">
         <h1 id="contacth1">Contact Book</h1>
